--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -7,15 +7,95 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>onlineshopping Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+      <javaee.version>8.0</javaee.version>
+      <spring.version> 4.3.22.RELEASE</spring.version>
+      <spring.security.version>4.2.2.RELEASE</spring.security.version>
+      
+  </properties>
+  
   <dependencies>
+
+        <!--  JAVA EE API -->
+      
+    <dependency>
+          <groupId>javax</groupId>
+          <artifactId>javaee-api</artifactId>
+          <version>${javaee.version}</version>
+          <scope>provided</scope>
+     </dependency>
+     
+     
+        <!-- JUNIT -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    
+    <!-- Spring dependency -->
+    
+       <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+       </dependency>
+       
+ 	
+ 	<!-- JSTL -->
+
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>  
+		
+    <!--Spring webflow  -->
+       <dependency>
+           <groupId>org.springframework.webflow</groupId>
+           <artifactId>spring-webflow</artifactId>
+           <version>2.5.1.RELEASE</version>
+        </dependency>
+    
+       
+       
+           <!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		
+		
+     
   </dependencies>
   <build>
+     <plugins>
+         <!--  Update to latest version of java -->
+          <plugin>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <version>3.1</version>
+               <configuration>
+                     <source>1.8</source>
+                     <target>1.8</target>
+               </configuration>
+          </plugin>
+     </plugins>
     <finalName>onlineshopping</finalName>
   </build>
 </project>
